<resources>
    <!--通用-->
    <string name="mine">我的</string>
    <string name="record">会议簿</string>
    <string name="app_name">智会议</string>
    <string name="meeting">会议助手</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_confirm1">确定</string>
    <string name="please_install_sd">请安装SD卡</string>
    <!--蓝牙模块-->
    <string name="I_know">知道了</string>
    <string name="not_connect">未连接</string>
    <string name="bluetooth_stay">不开启</string>
    <string name="search_result">搜索结果</string>
    <string name="bluetooth_open">开启 下一步</string>
    <string name="read_channel">是否读取存储数据</string>
    <string name="please_open_pen">请开启酷神笔！</string>
    <string name="bluetooth_request">酷神笔开启蓝牙！</string>
    <string name="attention">注：未开启手机蓝牙无法连接</string>
    <string name="way_to_connect">长按酷神笔开关，指示红绿灯闪烁松手即可连接</string>
    <string name="scan_result_info">为了避免给自己和别人带来困扰，请在确认设备号之后进行连接</string>
    <string name="scan_result_title">我的设备 :</string>
    <string name="scan_result_others">附近的设备</string>
    <string name="his_info_hint">提示</string>
    <!--注册登录模块-->
    <string name="password">密码</string>
    <string name="login_title">登录</string>
    <string name="login_space">登 录</string>
    <string name="regist_title">注册</string>
    <string name="regist_space">注 册</string>
    <string name="confirm_space">确 定</string>
    <string name="complete_space">完 成</string>
    <string name="tel_number">手机号码</string>
    <string name="wrong_data">数据异常</string>
    <string name="cache_again">重新获取</string>
    <string name="quick_login">快捷登录</string>
    <string name="wrong_code">验证码有误</string>
    <string name="my_nick_name">我的昵称</string>
    <string name="simple_login">普通登录</string>
    <string name="login_failed">登录失败</string>
    <string name="send_success">发送成功</string>
    <string name="login_cancle">取消登录</string>
    <string name="wrong_tel">手机号码有误</string>
    <string name="wrong_net">网络连接失败</string>
    <string name="third_login">or</string>
    <string name="login_success">登录成功</string>
    <string name="wrong_confirm">验证码错误</string>
    <string name="active_password">动态密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="loading_request">正在请求</string>
    <string name="get_confirm_code">获取验证码</string>
    <string name="fill_confirm_code">输入验证码</string>
    <string name="please_select_header">请选择头像</string>
    <string name="get_active_password">获取动态密码</string>
    <string name="fill_person_message">完善个人资料</string>
    <string name="fill_password_again">再次输入密码</string>
    <string name="please_get_confirm_code">请获取验证码</string>
    <string name="wrong_name_or_password">用户名或密码错误</string>
    <string name="no_account_to_regist">没有账号？ 去注册</string>
    <string name="please_fill_correct_msg">请填写正确资料</string>
    <string name="have_account_to_login">已有账号？ 去登录</string>
    <!--会议模块-->
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="leave">离开</string>
    <string name="delete">删除</string>
    <string name="share_to">分享到</string>
    <string name="select_all">全选</string>
    <string name="take_photo">拍照</string>
    <string name="show_media">录屏播放</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_success">分享成功</string>
    <string name="not_select_all">全不选</string>
    <string name="loading_media">正在录屏</string>
    <string name="unknow_service">未知设备</string>
    <string name="scan_blue_pen">正在扫描</string>
    <string name="select_photo">从相册选择照片</string>
    <string name="follow_weibo">关注官方微博</string>
    <string name="change_record_title">变更本次记录名称</string>
    <string name="meeting_name">会议名称</string>
    <string name="write_page_index">第%d页</string>
    <string name="record_page_index">笔迹回放</string>
    <string name="please_collect">请将以下记录归档！</string>
    <string name="create_current_record">生成档案</string>
    <string name="please_input_title">请输入记录标题名称</string>
    <string name="guidang_hint">归档后内容将不可编辑，请在会议簿中查看</string>
    <string name="leave_warning">离开当前界面将退出录制功能 当前视频将会保存</string>
    <string name="create_record_success">生成会议档案成功</string>
    <string name="please_select_record">请选择档案页！</string>
    <string name="classify_work">工作例会</string>
    <string name="classify_project">项目会议</string>
    <string name="classify_study">学习培训</string>
    <string name="classify_explore">研讨会</string>
    <string name="classify_report">工作汇报</string>
    <string name="classify_review">评审会</string>
    <string name="classify_other">其他</string>
    <string name="qqchat">QQ</string>
    <string name="weibo">微博</string>
    <string name="wechat">微信</string>
    <string name="qzone">QQ空间</string>
    <string name="we_friend">朋友圈</string>
    <!--记录模块-->
    <string name="search">搜索</string>
    <string name="page_number">第%d页</string>
    <string name="style_meeting">会议</string>
    <string name="rename">重命名</string>
    <!--我的模块-->
    <string name="save">保存</string>
    <string name="record_cancel">放弃</string>
    <string name="add">补充</string>
    <string name="change">修改</string>
    <string name="header">头像</string>
    <string name="up_load">提交</string>
    <string name="setting">设置</string>
    <string name="not_set">未设置</string>
    <string name="nick_name">昵称</string>
    <string name="pen_info">笔信息</string>
    <string name="fb_title">问题反馈</string>
    <string name="au_title">关于我们</string>
    <string name="mine_confirm">确认</string>
    <string name="exit_login">退出登录</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="set_success">设置成功</string>
    <string name="service">服务条款与协议</string>
    <string name="set_password">设置密码</string>
    <string name="wrong_nick">昵称不能为空</string>
    <string name="check_update">检查新版本</string>
    <string name="login_password">登录密码</string>
    <string name="change_success">修改成功</string>
    <string name="request_failed">请求失败</string>
    <string name="change_password">修改密码</string>
    <string name="change_nickname">修改昵称</string>
    <string name="already_new">已经是最新版本</string>
    <string name="wrong_password">请输入正确密码</string>
    <string name="wrong_password1">密码不一致</string>
    <string name="please_fill_nick">请输入昵称</string>
    <string name="wrong_connect">联系方式不正确</string>
    <string name="loading_request_m">正在请求…</string>
    <string name="please_fill_fb">请填写反馈内容</string>
    <string name="input_rules">最长包含18个汉字字符</string>
    <string name="please_fill_fb_m">请填写您要反馈的内容…</string>
    <string name="please_leave_connect">请留下您的联系方式：手机/邮箱</string>
    <string name="statement">注册即同意《用户协议》</string>
    <string name="numexist">该手机号已存在，无需注册，快捷登录后去我的里设置密码即可使用普通登录！</string>

    <string name="update_dialog">有新版本，是否更新</string>
    <string name="update_nexttime">下次再说</string>
    <string name="update_now">现在更新</string>
    <!--array-->
    <string-array name="selectIcon">
        <item>拍照</item>
        <item>选择图片</item>
    </string-array>

</resources>
