<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/simple_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/take_photo"
            android:textColor="#777777"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="@color/colorWhite"
            android:text="@string/select_photo"
            android:textColor="#777777"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_cancel_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:text="@string/btn_cancel"
            android:textColor="#777777"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>