<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newchinese.smartmeeting.ui.record.activity.CollectAddTypeActivity">

    <include android:id="@+id/head"
        layout="@layout/bar_base"/>

    <TextView
        android:id="@+id/tv_type_one"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_study"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <TextView
        android:id="@+id/tv_type_two"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_work"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_one" />

    <TextView
        android:id="@+id/tv_type_three"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_project"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_two" />

    <TextView
        android:id="@+id/tv_type_four"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_explore"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_three" />

    <TextView
        android:id="@+id/tv_type_five"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_report"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_four" />

    <TextView
        android:id="@+id/tv_type_six"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_review"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_five" />

    <TextView
        android:id="@+id/tv_type_seven"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/classify_other"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_six" />

</android.support.constraint.ConstraintLayout>
