<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_draw_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_background"
    tools:context="com.newchinese.smartmeeting.ui.mine.activity.SettingActivity">

    <include
        android:id="@+id/bar"
        layout="@layout/bar_base" />

    <LinearLayout
        android:id="@+id/hahaha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_header"
            style="@style/simple_white_back"
            android:layout_height="80dp">

            <TextView
                style="@style/simple_text"
                android:layout_centerVertical="true"
                android:text="@string/header" />

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@mipmap/default_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_nick_name"
            style="@style/simple_white_back"
            android:layout_marginTop="15dp">

            <TextView
                style="@style/simple_text"
                android:layout_centerVertical="true"
                android:text="@string/nick_name" />

            <TextView
                android:id="@+id/tv_nick_name"
                style="@style/simple_text"
                android:layout_toLeftOf="@+id/hehehe"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:maxLength="14" />

            <ImageView
                android:id="@+id/hehehe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_right_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_change_pwd"
            android:visibility="visible"
            style="@style/simple_white_back"
            android:layout_marginTop="1dp">

            <TextView
                style="@style/simple_text"
                android:layout_centerVertical="true"
                android:text="@string/login_password" />

            <TextView
                android:id="@+id/tv_set_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/iv_arrow"
                android:text="@string/change"
                android:textColor="@color/simple_blue"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_right_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_exit_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/hahaha"
        android:layout_marginTop="45dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/exit_login"
        android:textColor="@color/simple_blue"
        android:textSize="18sp" />
</RelativeLayout>
