<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:background="@drawable/dialog_circular_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/his_info_hint"
                    android:textColor="@color/gray3"
                    android:textSize="23sp"/>

                <TextView
                    android:id="@+id/etInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/read_channel"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/graydc" />

            <LinearLayout
                android:id="@+id/double_button"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/negativeButton"
                    android:layout_width="match_parent"
                    android:layout_height="35.0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textSize="16sp"
                    android:textColor="@color/simple_blue"/>

                <View
                    android:id="@+id/partline"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/graydc" />

                <Button
                    android:id="@+id/positiveButton"
                    android:layout_width="match_parent"
                    android:layout_height="35.0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/btn_confirm"
                    android:textSize="16sp"
                    android:textColor="@color/simple_blue"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>