<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_background"
    tools:context="com.newchinese.smartmeeting.ui.mine.fragment.MineFragment">

    <TextView
        android:id="@+id/tv_mine_about"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/au_title"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mine_fb" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="105dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_mine_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_mine_icon"
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mine_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/simple_background"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_mine_icon"
                app:layout_constraintLeft_toRightOf="@+id/iv_mine_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mine_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:textColor="#b9d7ff"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/iv_mine_icon"
                app:layout_constraintTop_toTopOf="@+id/iv_mine_icon" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/icon_right_white_arrow" />
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_mine_pen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pen_info"
            android:textColor="@color/gray5"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_mine_pen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="#494949"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_mine_fb"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:drawableEnd="@mipmap/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/fb_title"
        android:textColor="@color/gray5"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_mine_pen" />

</android.support.constraint.ConstraintLayout>